objects/School_Name__c.object
<CustomObject>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strength_of_the_school__c</fullName>
        <label>Strength of the school</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>School</label>
    <nameField>
        <label>School Name Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>